--- a/src/views/addExpense.ejs
+++ b/src/views/addExpense.ejs
@@ -9,7 +9,7 @@
 <body>
   
     <main>
-        <h1>Nieuwe Transactie Toevoegen</h1>
+        <h1>Transactie Toevoegen</h1>
         <form action="/expenses/add" method="POST">
             <label for="description">Omschrijving:</label>
             <input type="text" id="description" name="description" required>
