--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,6 +1,7 @@
 <%- include('partials/header') %>
 
 <h1>Shop van Kaptan</h1>
+<h2>Log hier in!</h2>
 
 <form action="/login" method="POST">
     <label for="username">Gebruikersnaam:</label>
@@ -10,8 +11,9 @@
     <input type="password" id="password" name="password" required>
     
     <button type="submit">Inloggen</button>
+    
 </form>
-
 <p>Heb je nog geen account? <a href="/register">Registreer hier!</a></p>
+
 
 <%- include('partials/footer') %>
